@@ -2,6 +2,7 @@
                               Kiji Scoring Release Notes
 
 Version 0.2.0
+  * SCORE-22. KijiFreshnessManager store policy methods now include a variety of safety checks.
   * SCORE-41. FreshKijiTableReader now includes a preload method, which instantiates all objects
       necessary for freshening a given data request without side effects.
   * SCORE-39. FreshKijiTableReader now includes methods which override configured timeout durations.
